--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,95 +3,99 @@
   contents:
     - name: Full Name
       value: Ivan Melev
-    - name: Date of Birth
-      value: 17th May 1993
+    #- name: Date of Birth
+    #  value: 17th May 1993
     - name: Languages
-      value: Macedonian, Bulgarian, English
-
-- title: Education
-  type: time_table
-  contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
-
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+      value: English, Bulgarian, Macedonian.
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Uncertainty Quantification (UQ) in Machine Learning (ML).
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - </u> <a href="https://proceedings.mlr.press/v48/gal16.pdf" target="_blank">MC Dropout</a>. Its interpretation and properties.
+        - </u> <a href="https://www.jmlr.org/papers/volume24/18-521/18-521.pdf" target="_blank">HiGrad</a>. How it can (if it can) be utilised for Bayesian UQ.
+        - Adaptations of Bootstrapping for ML Models.
+    - title: Aleatory and Epistemic Uncertainty.
       items:
-        - Description 1.
-        - Description 2.
+        - Formalization of </u> <a href="https://link.springer.com/content/pdf/10.1007/s10994-021-05946-3.pdf" target="_blank">Epistemic and Aleatory Uncertainty</a>.
+        -  </u> <a href="https://link.springer.com/book/10.1007/978-1-4419-5941-6" target="_blank">Frequentist Interpretations of Bayesian UQ</a>.
+    - title: Robustness of ML models.
+      items:
+        - Sensitivity of ML Models to Changes in the Inputs.
+         
+- title: Experience
+  type: time_table
+  contents:
+    - title: Doctoral Candidate in Statistics
+      institution: Ludwig-Maximilians University, Munich
+      year: 2023 -
+      description:
+        - I am part of Göran Kauermann's chair at the Institute of Statistics at LMU - Munich. My work focuses on uncertainty quantification in machine learning.
+        #- Description 2.
+        #- title: Description 3.
+        #  contents:
+        #    - Sub-description 1.
+        #    - Sub-description 2.
+    - title: Data Analyst
+      institution: Allianz SE, Munich
+      year: 2022-2023
+      #description:
+      #  - Training and evaluating statistical models for 
+      #  - Description 2.
+
+    - title: Student Assistant
+      institution: Ludwig-Maximilians University, Munich
+      year: 2020-2023
+      description:
+         Responsible for literature reviews, data collection and data analysis for various projects related to research in cognitive psychology.
+
+- title: Education
+  type: time_table
+  contents:
+    - title: MSc, Neuroengineering
+      institution: Technical University Munich
+      year: 2020-
+      description:
+      #  - A research oriented program in the intersection between experimental neuroscience and computational neuroscience. The electives I attend go in the direction of statistics and machine learning.
+      #  - "Final thesis: Measurement Error Statistical Models: A Neuroscientific Case Study (Prof. Augustin, Prof. Ploner)"
+        - title: A research oriented program in the intersection between experimental neuroscience and computational neuroscience. The electives I attend go in the direction of statistics and machine learning.
+          contents:
+            - "Final thesis: Measurement Error Statistical Models: A Neuroscientific Case Study (Prof. Augustin, Prof. Ploner), grade: 1.0"
+            
+    - title: "MSc, Psychology: Learning Sciences"
+      institution: Ludwig-Maximilians University, Munich
+      year: 2019-2022
+      description:
+        - A research oriented program with a focus on learning, cognition and the tools used for their statistical modeling.
+        #- Description 2.
+    - title: "BA, Psychology"
+      institution: Ss. Cyril and Methodius, Skopje
+      year: 2014-2018
+      description:
+        - Focus on psychometrics and statistical modeling in general.
+        #- Description 2.        
+      
+
+#- title: Open Source Projects
+#  type: time_table
+#  contents:
+#    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#      year: 2015-now
+#      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+
+#- title: Honors and Awards
+#  type: time_table
+#  contents:
+#    - year: 1921
+#      items: 
+#        - Nobel Prize in Physics 
+#        - Matteucci Medal
+#    - year: 2029
+#      items: 
+#        - Max Planck Medal
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> <a href="https://en.wikipedia.org/wiki/Tavli" target="_blank">Tavli</a>, </u> <a href="https://www.reddit.com/r/sudoku/comments/5kw1nt/how_to_get_faster/?rdt=40380" target="_blank">Speed Solving Sudoku</a>, Photography, Music, <a href="https://www.amazon.de/Blood-Ties-Ipek-Yosmaoglu/dp/080147924X" target="_blank">Late Ottoman Empire History</a>, <a href="https://www.amazon.de/Way-Zen-Alan-W-Watts/dp/0375705104" target="_blank">Zen Meditation</a>.
