--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,7 +24,7 @@
       items:
         - Sensitivity of ML Models to Changes in the Inputs.
          
-- title: Experience
+- title: Working Experience
   type: time_table
   contents:
     - title: Doctoral Candidate in Statistics
@@ -49,6 +49,42 @@
       year: 2020-2023
       description:
          Responsible for literature reviews, data collection and data analysis for various projects related to research in cognitive psychology.
+         
+
+- title: Learning Experience
+  type: nested_list
+  contents:
+    - title: 2023
+      items: 
+        - Estimation Theory (TUM </u> <a href="https://campus.tum.de/tumonline/pl/ui/$ctx/wbModHBReport.wbGenHTMLForBeschr?pKnotenNr=1720332&pSemesterNr=192&pLangCode=EN" target="_blank">Course</a>)
+        - Decision Theory (LMU Course, audited)
+        - Generalized Linear Models (TUM </u> <a href="https://campus.tum.de/tumonline/WBMODHB.wbShowMHBReadOnly?pKnotenNr=478025" target="_blank">Course</a>)
+        - Real Analysis of a Single Variable (Self- </u> <a href="https://www.amazon.de/-/en/Terence-Tao/dp/9380250649" target="_blank">study</a>)
+        - Advanced Topics in Real Analysis (Self- </u> <a href="https://www.amazon.de/-/en/Terence-Tao/dp/9380250657" target="_blank">study</a>, still not finished)
+             
+    - title: 2022
+      items:
+        - Regression Analysis (TUM </u> <a href="https://campus.tum.de/tumonline/pl/ui/$ctx/wbModHBReport.wbGenHTMLForBeschr?pKnotenNr=702795&pSemesterNr=194&pLangCode=EN" target="_blank">Course</a>)
+        - Computational Statistics (TUM </u> <a href="https://campus.tum.de/tumonline/pl/ui/$ctx/wbModHBReport.wbGenHTMLForBeschr?pKnotenNr=2991466&pSemesterNr=195&pLangCode=EN" target="_blank">Course</a>)
+        - Statistics on Graphs (TUM </u> <a href="https://campus.tum.de/tumonline/ee/ui/ca2/app/desktop/#/slc.tm.cp/student/courses/950626635?$ctx=design=ca=;lang=en&$scrollTo=toc_overview" target="_blank">Course</a>)
+        - High-Dimensional Statistics (Self- </u> <a href="https://www.amazon.de/-/en/Trevor-Hastie/dp/1498712169" target="_blank">study</a>)
+        - Information Theory (TUM </u> <a href="https://www.ce.cit.tum.de/en/lnt/teaching/lectures/information-theory/"_blank">Course</a>)
+
+    - title: 2021
+      items:
+        - Discrete Mathematics (Self- </u> <a href="https://www.amazon.de/-/en/Susanna-S-Epp/dp/0495391328" target="_blank">study</a>)
+        - Time Series Analysis (Self- </u> <a href="https://link.springer.com/book/10.1007/978-3-319-52452-8" target="_blank">study</a>)
+        - First Course in Probability Theory (Self- </u> <a href="https://www.amazon.de/-/en/Peter-Texas-University-Lubbock-Westfall/dp/1466512105" target="_blank">study</a>)
+
+    - title: 2020
+      items:
+        - Electric Circuit Theory (Self- </u> <a href="https://www.amazon.de/-/en/Charles-Alexander/dp/0078028221" target="_blank">study</a>)
+        - Calculus (Single and Multivariate) (Self-</u> <a href="https://www.amazon.de/-/en/George-B-Jr-Thomas/dp/0321878965" target="_blank">study</a>)
+        - First Course in Linear Algebra (Self-</u> <a href="https://www.amazon.de/-/en/Gilbert-Strang/dp/0980232716" target="_blank">study</a>)
+        - Psychometric Theory (LMU Course, used </u> <a href="https://www.amazon.com/Test-Theory-Treatment-Roderick-McDonald/dp/0805830758" target="_blank">this</a> book)
+        
+
+
 
 - title: Education
   type: time_table
