--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ repo_trophies:
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -71,7 +71,7 @@ github_username: # your GitHub user name
 gitlab_username: # your GitLab user name
 x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
-linkedin_username: # your LinkedIn user name
+linkedin_username: ivan-melev-948486236/
 telegram_username: # your Telegram user name
 scholar_userid: # your Google Scholar ID
 semanticscholar_id: # your Semantic Scholar ID
@@ -122,7 +122,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 blog_name: Ivan's Blog # blog_name will be displayed in your blog page
 blog_nav_title: blog #your blog must have a title for it to be displayed in the nav bar
-blog_description: Academic and non-academic content.
+blog_description: I write about my academic journey, music and share photographies.
 permalink: /blog/:year/:title/
 
 # Pagination
@@ -157,7 +157,7 @@ disqus_shortname: al-folio # put your disqus shortname
 #external_sources:
 #  - name: medium.com
 #    rss_url: https://medium.com/@al-folio/feed
-
+    
 # -----------------------------------------------------------------------------
 # Collections
 # -----------------------------------------------------------------------------
@@ -263,9 +263,10 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['formatting', 'images', 'links', 'math', 'code'] # these tags will be displayed on the front page of your blog
-display_categories: ['blockquotes'] # these categories will be displayed on the front page of your blog
-
+#display_tags: ['formatting', 'images', 'links', 'math', 'code'] # these tags will be displayed on the front page of your blog
+#display_categories: ['blockquotes'] # these categories will be displayed on the front page of your blog
+display_tags: ['statistics', 'mathematics', 'self-study', 'music', 'photography']
+#display_categories: ['']
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
 # -----------------------------------------------------------------------------
