--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ contact_note: My preferred way to reach me is via e-mail.
 google_analytics:  # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
 cronitor_analytics:  # cronitor RUM analytics site ID (format: XXXXXXXXX)
 
-google_site_verification:  # your google-site-verification ID (Google Search Console)
+google_site_verification:  googlefb32f531b1b4f61b.html
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 
 # -----------------------------------------------------------------------------
