--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ contact_note: My preferred way to reach me is via e-mail.
 google_analytics:  # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
 cronitor_analytics:  # cronitor RUM analytics site ID (format: XXXXXXXXX)
 
-google_site_verification:  lZRBs4d2K56RBM-dy2o6wgL3MGDE5Hz9coDkfUxg1_M
+google_site_verification:  #lZRBs4d2K56RBM-dy2o6wgL3MGDE5Hz9coDkfUxg1_M
 bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 # Blog
